fix(Home): :bug: fix bug font in carrousel

--- a/client/src/styles/components/_carrousel.scss
+++ b/client/src/styles/components/_carrousel.scss
@@ -81,6 +81,7 @@ $card-size: 18rem;
   .HomeCard_DescriptionContainer {
     display: flex;
     width: 100%;
+    font-family: "Quicksand", sans-serif;
   }
 
   .HomeCard_PriceContainer {
