--- a/client/src/styles/components/_carrousel.scss
+++ b/client/src/styles/components/_carrousel.scss
@@ -67,11 +67,12 @@ $card-size: 18rem;
   .HomeCard_NameContainer {
     display: flex;
     width: 100%;
-
+    
     h1 {
+      font-family:  $standard-font-Barlow;
       margin-top: 5px;
       color: black;
-      font-size: 13px;
+      font-size: 14px;
       text-decoration: none;
       text-justify: auto;
 
@@ -82,6 +83,17 @@ $card-size: 18rem;
     display: flex;
     width: 100%;
     font-family: "Quicksand", sans-serif;
+    color: black;
+  }
+
+  .HomeCard_RatingContainer {
+    display: flex;
+    align-items: center;
+    margin-top: 10px;
+    
+    img {
+      width: 20px;
+    }
   }
 
   .HomeCard_PriceContainer {
@@ -89,7 +101,7 @@ $card-size: 18rem;
     justify-content: flex-end;
     font-family: "Urbanist", sans-serif;
     color: black;
-    font-size: 15px;
+    font-size: 14px;
   }
 
   .HomeCard_AddCartButtonContainer {
