--- a/client/src/styles/components/_navbar.scss
+++ b/client/src/styles/components/_navbar.scss
@@ -4,10 +4,12 @@
   align-items: center;
   justify-content: space-between;
   font-family: $standard-font-Poiret-One;
-  //margin-right: 30px;
-  //margin-left: 30px;
-  //margin-top: 10px;
-
+  margin-right: 30px;
+  margin-left: 30px;
+  margin-top: 10px;
+  margin-bottom: 12px;
+  
+    
   
     @media (max-width: 900px) {
       justify-content: center;
@@ -36,7 +38,7 @@
   .Nav_container_navbar {
     width: auto;
     @media (max-width: 900px) {
-      width: 80%;
+      width: 100%;
     }
 
     @media (max-width: 700px) {
@@ -57,7 +59,7 @@
   position: relative;
   background-color: $standard-color-blue;
   align-items: center;
-  padding: 9px 20px;
+  padding: 10px 20px;
   border-radius: 50px;
   width: auto;
   margin-right: 10px;
@@ -65,7 +67,6 @@
 
   @media (max-width: 900px) {
     justify-content: space-between;
-    margin-bottom: 10px;
   }
 
   @media (max-width: 610px) {
@@ -92,6 +93,9 @@
 
   .nav_middle_button {
     border-right: 1px solid $white;
+    @media (max-width:900px) {
+      border: none
+    }
   }
 
   .link-style {
