style(Home): :art: Change Scroll Bar color

--- a/client/src/styles/components/_home.scss
+++ b/client/src/styles/components/_home.scss
@@ -2,6 +2,16 @@ body {
   margin: 0;
   
 }
+// ------Scroll Bar ----
+body::-webkit-scrollbar {
+  width: 5px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: $standard-color-blue;
+  border-radius: 10px;
+}
+//--------------------------
 
 .home_wrapper {
   display: flex;
