--- a/client/src/styles/components/Card2/_card2.scss
+++ b/client/src/styles/components/Card2/_card2.scss
@@ -177,7 +177,7 @@
         }
     }
     .pagination2{
-        background-color: red;
+        //background-color: red;
         height: 80px;
         width: 100%;
         display: flex;
