--- a/client/src/styles/components/FilterList/_filterList.scss
+++ b/client/src/styles/components/FilterList/_filterList.scss
@@ -1,10 +1,13 @@
 .container-ItemFilterList {
-  margin-top: 20px;
   padding-right: 30px;
   padding-top: 30px;
-  min-height: 280px;
+  min-height: 45%;
   width: 95%;
-  background-color: $standard-color-blue-light;
+  max-height: 400px;
+  height: 400px;
+  background-color: $standard-color-blue-glass;
+  //background-color: $standard-color-blue-green;
+
   border-radius: 16px;
   display: flex;
   flex-direction: column;
