fix(Styles): :bug: fix css bugs

--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -75,3 +75,7 @@ $standard-basic-heith-home: 1080px;
 // $standard-heigth-full-hd: 1080px;
 // $standard-border-radius: 10px;
 // $standard-space-between-elements: 19px;
+$navbar-height: 70px;
+$footer-height: 70px;
+$filterPanel-width: 300px;
+$filterFilt-height: 400px;
