--- a/client/src/styles/components/ItemFilter/_itemFilter.scss
+++ b/client/src/styles/components/ItemFilter/_itemFilter.scss
@@ -1,6 +1,6 @@
 .container-itemFilter {
   height: 30px;
-  padding: 15px;
+  // padding: 15px;
   border-radius: 30px;
   align-items: center;
   justify-content: center;
