--- a/client/src/styles/components/Card2/_card2.scss
+++ b/client/src/styles/components/Card2/_card2.scss
@@ -1,25 +1,29 @@
 .container-render-card-v-beta {
     //Buenisimo
-    //background-color: aqua;
-    width: 1502px;
-    width: 80%;
-    height: 100%;
+    // background-color: aqua;
+    width: calc(100% - $filterPanel-width);
     display: flex;
+    padding: 10px;
     flex-direction: column;
     align-items: center;
-
+    max-height: 100%;
+    overflow-y: auto;
+    
     .container-card-beta {
         width: 100%;
-        height: 95%;
-        padding-top: 30px;
+        
+        // padding-top: 30px;
         //background-color: $standard-color-gray;
-        display: grid;
-        grid: repeat(2, 350px) / auto-flow;
-        gap: 0 0px;
+        // display: grid;
+        // grid: repeat(2, 350px) / auto-flow;
+        // gap: 0 0px;
+        // gap: 30px 0;
+        border-radius: $standard-border-radius;
+        display: flex;
+        flex-wrap: wrap;
         justify-content: space-around;
         align-items: center;
-        gap: 30px 0;
-        border-radius: $standard-border-radius;
+        gap: 10px;
 
         .product-card-beta {
             box-shadow: 4px 4px 20px 5px rgba(0, 0, 0, 0.2);
@@ -44,15 +48,19 @@
 
             .content-image-card-beta {
                 //background-color: red;
-                height: 110px;
-                width: 100%;
+                max-height: 110px;
+                max-width: 100%;
                 display: flex;
                 align-items: center;
                 justify-content: center;
-
+                // position: relative;
+                overflow: hidden;
+                background-size: cover;
+                margin: auto;
+                
                 img {
                     max-width: 85%;
-                    max-height: 100%;
+                    // max-height: 100%;
                     background-color: $standard-color-white;
                     //background-color: $standard-color-red;
                     border-radius: $standard-border-radius;
@@ -177,7 +185,7 @@
         }
     }
     .pagination2{
-        background-color: red;
+        // background-color: red;
         height: 80px;
         width: 100%;
         display: flex;
