--- a/client/src/styles/components/_footer.scss
+++ b/client/src/styles/components/_footer.scss
@@ -11,3 +11,7 @@
     display: flex;
     justify-content: flex-end;
 }
+
+.MuiBox-root .MuiPaper-root .MuiToolbar-root {
+    height: $footer-height;
+}
