--- a/client/src/styles/components/_dashboard_user.scss
+++ b/client/src/styles/components/_dashboard_user.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   background-color: $white;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   //font-family: 'Courier New', Courier, monospace;
   //margin-top: 10px;
 }
@@ -156,36 +156,68 @@
     width: 100%;
 
     .dash_onePurchase {
-      display: flex;
-      justify-content: flex-start;
+      display: grid;
+      grid-template-columns: 20% 80%;
+      gap: 15px;
       align-items: center;
       border-bottom: 1px solid rgb(187, 184, 184);
       width: 90%;
+      margin-top: 15px;
 
       .dash_onePurchase_imageSide {
         display: flex;
         justify-content: center;
+        padding: 5px;
 
-        width: 20%;
         margin: 10px;
 
         .imagePurchase {
-          width: 80px;
+          width: 100%;
+          height: 180px;
         }
       }
 
       .dash_onePurchase_infoSide {
-        width: 80%;
+        padding: 5px;
+        .dash_onePurchase_infoItems {
+          display: flex;
+          padding: 20px;
 
-        p {
-          margin: 2px;
-          font-size: 18px;
+          li {
+            white-space: pre-line;
+            padding: 5px;
+          }
         }
+
+        .dash_onePurchase_PaymentInfo {
+          display: flex;
+          justify-content: space-around;
+          padding: 20px;
+
+          p {
+            font-size: 17px;
+          }
+
+          span {
+            font-size: 15px;
+            color: gray;
+            font-weight: 700;
+          }
+        }
+
         h3 {
           margin: 2px;
           font-size: 18px;
         }
+        p {
+          margin: 2px;
+          font-size: 18px;
+        }
       }
+    }
+
+    .dash_onePurchase:last-child {
+      border: none;
     }
   }
 }
