feat(dashboard-User): :construction: Modal window to DashboardUser information

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -12,6 +12,7 @@
 @import './components/footer';
 @import './components/Checkout/shoppingCart';
 @import './components//Checkout/form';
+@import './components/modalWIndow/modalWindow';
 
 //! Detail
 @import './components/Detail/detail';
