--- a/client/src/styles/components/_navbar.scss
+++ b/client/src/styles/components/_navbar.scss
@@ -143,7 +143,7 @@
     right: 10px;
     top: 80px;
     width: 140px;
-    height: 70px;
+    height: auto;
     z-index: 2;
     background-color: $standard-color-blue;
     border-radius: 10px;
@@ -254,6 +254,7 @@
   z-index: 3;
   bottom: 0%;
   display: none;
+  padding-top: 25px;
   
 
   @media (max-width: 610px) {
