--- a/client/src/styles/components/modalUser/_modalUser.scss
+++ b/client/src/styles/components/modalUser/_modalUser.scss
@@ -27,6 +27,15 @@
         padding: 20px;
         font-family: $standard-font-Poiret-One;
         z-index: 6;
+        @media (max-width:900px) {
+            width: 70%;
+            
+        }
+        @media (max-width:610px) {
+            width: 100%;
+            
+        }
+
 
         .Modal_TitleContainer {
             margin-top: 5px;
@@ -81,11 +90,19 @@
             font-family: $standard-font-Barlow;
             //flex-direction: column;
 
+            @media (max-width:900px) {
+                flex-direction: column;
+                
+            }
+
             .Modal_info1 {
                 width: 45%;
                 display: flex;
                 flex-direction: column;
-
+                @media (max-width:900px) {
+                    width: 100%;
+                    
+                }
                 input {
                     margin-bottom: 10px;
                     height: 30px;
@@ -96,6 +113,10 @@
                 width: 45%;
                 display: flex;
                 flex-direction: column;
+                @media (max-width:900px) {
+                    width: 100%;
+                    
+                }
                 input {
                     margin-bottom: 10px;
                     height: 30px;
