style(Nav): :art: Added cart number in NavBar

--- a/client/src/styles/components/_navbar.scss
+++ b/client/src/styles/components/_navbar.scss
@@ -74,6 +74,30 @@
     border-radius: 0;
   }
 
+  .Nav_ShoppinCartContainer {
+    position: relative;
+    .nav_cart_pop {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      top: 20px;
+      right: -5px;
+      background-color: red;
+      border-radius: 100%;
+      width: 20px;
+      height: 20px;
+      h1 {
+        margin: 0;
+        padding: 0;
+        font-size: 12.5px;
+        color: white;
+        font-family: "Barlow", sans-serif;
+
+      }
+    }
+  }
+
   .Nav_responsive_LogoMenu {
     display: none;
     cursor: pointer;
