feat(checkout form): :art: modal window added in checkout

--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -13,6 +13,7 @@
 @import './components/Checkout/shoppingCart';
 @import './components//Checkout/form';
 @import './components/modalUser/modalUser';
+@import './components/modalCart/modalCart';
 
 //! Detail
 @import './components/Detail/detail';
